src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Partner Lead Process</fullName>
        <description>Process for Leads of Partner Contacts and Accounts.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APIEndpoint__c</fullName>
        <description>API Endpoint for Data Customers</description>
        <inlineHelpText>API Endpoint for Data Customers</inlineHelpText>
        <label>API Endpoint</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DataPartnerType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business Service Providers</fullName>
                </value>
                <value>
                    <fullName>Consolidated Screening List</fullName>
                </value>
                <value>
                    <fullName>De Minimis</fullName>
                </value>
                <value>
                    <fullName>FAQs on Exporting</fullName>
                </value>
                <value>
                    <fullName>ITA Offices &amp; Centers</fullName>
                </value>
                <value>
                    <fullName>ITA Taxonomies</fullName>
                </value>
                <value>
                    <fullName>Market Research Library</fullName>
                </value>
                <value>
                    <fullName>Tariff Rates</fullName>
                </value>
                <value>
                    <fullName>Trade Events</fullName>
                </value>
                <value>
                    <fullName>Trade Leads</fullName>
                </value>
                <value>
                    <fullName>Trade News &amp; Articles</fullName>
                </value>
                <value>
                    <fullName>Zip Code to USEAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <label>Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Service Providers</fullName>
                </value>
                <value>
                    <fullName>Codes</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Country Pages</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Links</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Market Research</fullName>
                </value>
                <value>
                    <fullName>Procurment Opportunity</fullName>
                </value>
                <value>
                    <fullName>Promotion Opportunity</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Statistics</fullName>
                </value>
                <value>
                    <fullName>Tariff Schedules</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Web Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Temporary Campaign ID field</description>
        <label>Web Campaign ID</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DataPartnerType__c</fullName>
        <label>Data Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataSet__c</fullName>
        <label>Data Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Hidden__c</fullName>
        <description>used to move industry from lead to organization</description>
        <label>Industry Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Agency__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_7_Individual__c)</formula>
        <label>Lead Owner Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Country__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_5_Country__c)</formula>
        <label>Lead Owner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_DAS__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_2_DAS_Level__c)</formula>
        <label>Lead Owner DAS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Office__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_6_Office__c)</formula>
        <label>Lead Owner Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Region__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_3_Region_2__c)</formula>
        <label>Lead Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Sub_region__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_4_Region_1__c)</formula>
        <label>Lead Owner Sub-region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Unit__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_1_Top_Level__c)</formula>
        <label>Lead Owner Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Hidden__c</fullName>
        <label>Sector Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceTechnology__c</fullName>
        <label>Source Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DataPartnerType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>Lotus Notes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RSS</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SharePoint</fullName>
                </value>
                <value>
                    <fullName>Web Service</fullName>
                </value>
                <value>
                    <fullName>Word Document</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Detail__c</fullName>
        <label>Source Detail</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sector_Hidden__c</fullName>
        <label>Sub-Sector Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Campaign_ID__c</fullName>
        <label>Web Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this lead.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Investment_Promotion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Partner_Lead</fullName>
        <active>true</active>
        <businessProcess>Partner Lead Process</businessProcess>
        <description>Lead for Data Partners/Consumers.</description>
        <label>Partner Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Lead</fullName>
        <active>true</active>
        <businessProcess>Standard Leads</businessProcess>
        <label>Standard Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>If_Country_is_US_need_state_at_convert</fullName>
        <active>true</active>
        <description>If country is US, must indicate a state before you can convert lead to Qualified</description>
        <errorConditionFormula>(Country = &quot;United States&quot;) &amp;&amp; (ISBLANK(State)) &amp;&amp; IsConverted=TRUE</errorConditionFormula>
        <errorDisplayField>State</errorDisplayField>
        <errorMessage>When converting a lead, if Country = US (United States) a State must be indicated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Create_Country_Required</fullName>
        <active>true</active>
        <description>Must have country to create lead</description>
        <errorConditionFormula>ISBLANK(Country)</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>To create a lead, you must indicate a Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Create_Phone_or_Email</fullName>
        <active>true</active>
        <description>Must have at least phone or email to create lead</description>
        <errorConditionFormula>ISBLANK(Phone) &amp;&amp; ISBLANK(Email)</errorConditionFormula>
        <errorMessage>You must have either an email address or phone number indicated to save a lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Source_Other_must_update_Sor_Detai</fullName>
        <active>true</active>
        <description>If Other is selected for lead source, user must enter something in the source detail field.</description>
        <errorConditionFormula>ISPICKVAL( LeadSource , &quot;Other&quot;) &amp;&amp; ISBLANK( Source_Detail__c )</errorConditionFormula>
        <errorDisplayField>Source_Detail__c</errorDisplayField>
        <errorMessage>When selecting &quot;Other&quot; for lead source, you must enter an alternative lead source in the Source Detail field.</errorMessage>
    </validationRules>
</CustomObject>